# check-tests-structure

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  noxfile.py  pyproject.toml  release.py
.github/workflows/: pr-checks.yml
docs/: changelog.md
src/check_tests_structure/: __main__.py  compare.py  config.py  lookup.py
tests/: test_compare.py  test_config.py  test_lookup.py
