[project]
name = "check-tests-structure"
version = "0.0.1"
description = ""
authors = [{name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch"}]
readme = "README.md"

dependencies = [
    "cyclopts>=2.9",
    "pydantic>=2.9",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
