[project]
name = "check-tests-structure"
version = "0.0.1"
description = ""
authors = [{name = "Leonardo Schwarz", email = "leonardo.schwarz@fgcz.ethz.ch"}]
readme = "README.md"

dependencies = [
    "cyclopts>=2.9",
    "pydantic>=2.9",
    "rapidfuzz>=3.10",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
check-tests-structure = "check_tests_structure.__main__:app"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
